@@ -665,6 +665,27 @@ The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
 See ZAPPERMASKS for more information on zapper mask syntax.
 
+PROP_FUMBLE=\
+Property   : Prop_Fumble\n\r\
+Targets    : Items, Areas, Rooms\n\r\
+Parameters : CHANCE=[PCT] (ITEM=WORN/HERE/HAVE/PRESENT) (MASK=[ZAPPERMASK])\n\r\
+Parameters : (MSG="<S-NAME> fail(s) to do @x1 to <T-NAME> because @x2.")\n\r\
+Parameters : (PRIVATE=TRUE/FALSE) (AID=[ABILITY ID],..) \n\r\
+Parameters : (ATYPE=[ABILITY TYPE],...) (ADOMAIN=[DOMAIN],...)\n\r\
+Example    : chance=50% mask="-race +elf" aid=Spell_Fireball,Spell_Light\n\r\
+Example    : chance=50% atype=spell,skill domain=stealthy\n\r\
+Description: \n\r\
+Causes a spell or skill to fumble and show a message according to the given \
+chance%.  The skills to fumble are identified as belonging to the given ATYPE \
+(if specified) AND either belonging to the ADOMAIN, having an AFLAG, or having \
+its Ability ID in the list of AID.  The skill will fumble if the caster matches \
+the given MASK zappermask.  The message MSG= may be specified, with special codes \
+@x1 for the skill name, and @x2 for the affected item name.  The message can be \
+shown PRIVATE= ly, or to everyone in the room.  If the affected is an item, the \
+ITEM= parameter can be used to specify the state that the item must be in to \
+cause the fumble.
+
+
 ADJSENSES=\
 cannotsee, canseehidden, canseeinvisible, canseeevil, canseegood, canseesneakers, canseebonus, \
 canseedark, canseeinfrared, cannothear, cannotmove, cannotsmell, cannottaste, cannotspeak, \
